# git-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cicd.yml
crates/git-test-util/: Cargo.toml  README.md
crates/git-test-util/src/: lib.rs
crates/git-todo/: Cargo.toml  README.md
crates/git-todo/src/: args.rs  config.rs  error.rs  git.rs  main.rs  todo_item.rs
crates/git-todo/tests/: main.rs
crates/git-user/: Cargo.toml  README.md
crates/git-user/src/: args.rs  config.rs  error.rs  git.rs  main.rs  profile.rs
crates/git-user/tests/: main.rs
