[package]
authors.workspace = true
categories.workspace = true
description = "CLI tool for managing git user profiles"
edition.workspace = true
license.workspace = true
keywords.workspace = true
name = "git-user"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
gix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
git-test-util = { workspace = true }

[lints]
workspace = true

[[test]]
name = "functional"
path = "tests/main.rs"
